--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
   <div class="container">
     <a class="navbar-brand" routerLink="home">Disperse</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -7,13 +7,15 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home</a>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLink="home">Home</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link">Search</a>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLink="search">Search</a>
         </li>
-        <li class="nav-item dropdown">
+      </ul>
+      <ul class="navbar-nav my-2 my-lg-0">
+        <li class="nav-item dropdown navbar-user-item">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Arvind Rajaraman
           </a>
@@ -28,3 +30,4 @@
     </div>
   </div>
 </nav>
+<div style="height: 91px; visibility: hidden;">Placeholder Navbar</div>
