--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -8,5 +8,5 @@
     </div>
   </div>
   <br>
-  <h5>You searched for "{{originalSearchQuery}}".</h5>
+  <h5>{{displayHeader(originalSearchQuery, originalPlaceType)}}</h5>
 </div>
