--- a/src/app/components/search/search.component.scss
+++ b/src/app/components/search/search.component.scss
@@ -6,3 +6,44 @@
   padding-top: 8px;
   padding-bottom: 8px;
 }
+
+.place-card {
+  padding: 20px;
+  margin-bottom: 30px;
+  border: 1px solid #F0E68B;
+  //box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+}
+
+.place-badges .badge {
+  margin-right: 5px;
+  background: #F0E68B;
+  color: black;
+  padding: 6px;
+  font-size: 10px;
+  text-transform: uppercase;
+}
+
+.place-information {
+  border: 0;
+  tr {
+    border: 0;
+    td {
+      border: 0;
+    }
+  }
+
+  .material-icons {
+    font-size: 20px;
+    color: #BFB770;
+    margin-right: 5px;
+  }
+
+  .info {
+    position: relative;
+    bottom: 2px;
+  }
+}
+
+.card-title, .card-subtitle {
+  text-transform: initial !important;
+}
