Linked scraper/places retriever to front-end

--- a/src/app/components/places-search/places-search.component.scss
+++ b/src/app/components/places-search/places-search.component.scss
@@ -18,6 +18,7 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  transition: 0.3s ease all;
 }
 
 .popular-place-card:hover {
